--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.14",
     "@tanstack/react-query": "^5.7.0",
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
